# GraphRender

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_CONTEXT.md  README.md  SECURITY.md  SESSION_NOTES.md  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: ai_task.md  bug_report.yml
.github/workflows/: ci.yml  gitleaks.yml  test.yml
docs/adr/: 001-health-check-contract.md  002-docker-integration-testing.md
elkjson/maven-archiver/: pom.properties
elkjson/maven-status/maven-compiler-plugin/compile/default-compile/: createdFiles.lst  inputFiles.lst
examples/: elk_settings.example.toml  example2.elk.json  example2.json  example2.layout.json  sample1.json  sample1.layout.json  sample2.json  sample2.layout.json
src/graphrender/: __init__.py  graphrender.py  profile.py  server.py
src/graphrender/resources/: __init__.py
src/melk/: __init__.py  elk_graph_svg.py  elk_json_enrich.py  melk.py
src/melk/resources/: default_theme.css
tests/: test_cli_main.py  test_graphrender_svg_output.py  test_icon_cache.py  test_profile_adapter.py
tests/integration/: conftest.py  test_health.py  test_render.py
themes/: _variables.scss  theme.scss
