[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphRender"
version = "0.1.0"
description = "Converts laid-out ELK JSON into structured SVG"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["svg", "graph", "elk", "diagram", "renderer"]
dependencies = [
    "svg.py>=1.0"
]
authors = [
    { name = "GraphRender contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/GraphRapids/GraphRender"
Repository = "https://github.com/GraphRapids/GraphRender"
Issues = "https://github.com/GraphRapids/GraphRender/issues"
Changelog = "https://github.com/GraphRapids/GraphRender/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
themes = [
    "GraphTheme>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
graphrender = [
    "resources/*",
]

[project.scripts]
graphrender = "graphrender.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
